Fix sum equals one constraint

--- a/BioCro/DARPA/biocro_opt_darpa.Rmd
+++ b/BioCro/DARPA/biocro_opt_darpa.Rmd
@@ -16,17 +16,17 @@ First read in all the necessary input data:
 * weather file created for biomass partitioning
 * biomass file from Setaria experiments
 
-```{r, eval=FALSE}
+```{r}
 library(dplyr)
 
 rundir <- getwd()
 
-OpBioGro_weather <- read.csv("BioCro/DARPA/biocro_opt_darpa_files/OpBioGro_weather.csv")
+OpBioGro_weather <- read.csv("biocro_opt_darpa_files/OpBioGro_weather.csv")
 colnames(OpBioGro_weather) <- c("year", "doy", "hour", "Solar", "Temp", "RH", "WS", "precip")
 readr::write_csv(OpBioGro_weather, path = file.path(rundir, 'SA-median.2019.csv'))
 WetDat <- OpBioGro_weather
 
-config <- PEcAn.BIOCRO::read.biocro.config(file.path(rundir, "BioCro/DARPA/biocro_opt_darpa_files/config.xml"))
+config <- PEcAn.BIOCRO::read.biocro.config(file.path(rundir, "biocro_opt_darpa_files/config.xml"))
 
 lat <- as.numeric(config$location$latitude)
 lon <- as.numeric(config$location$longitude)
@@ -40,7 +40,7 @@ l2n <- function(x) lapply(x, as.numeric)
 day1 <- 1
 dayn <- 100
 
-OpBioGro_biomass <- read.csv("BioCro/DARPA/biocro_opt_darpa_files/OpBioGro_biomass.csv")
+OpBioGro_biomass <- read.csv("biocro_opt_darpa_files/OpBioGro_biomass.csv")
 ```
 
 We want biomass estimates from `BioGro` (i.e., ttt) to be as close to the actual biomass values as possible (i.e., OpBioGro_biomass). Will be optimizing over the parameters, which are the biomass coefficients. 
@@ -54,9 +54,9 @@ TODO:
   * (ttt - OpBioGro_biomass) / OpBioGro_biomass
 * ~~upper and lower bounds are, initially, each between 0 and 1~~
   * Can use more restricted bounds, base on BioCro defaults? 
-* additional param constraints: parameter values for each stage should sum to one (note: this MUST happen because `BioCro` will not use pheno params that do not equal one)
-  * fnMap argument is only for number of parameters constraints? 
-  * include something like the below, see `?DEoptim` for another example
+* ~~additional param constraints: parameter values for each stage should sum to one (note: this MUST happen because `BioCro` will not use pheno params that do not equal one)~~
+  * ~~fnMap argument is only for number of parameters constraints?~~ 
+  * ~~include something like the below, see `?DEoptim` for another example~~
 function(x){
  if(x[1:5] == 1){
  ifelse(x[6:10]){
@@ -64,7 +64,7 @@ function(x){
  }
 }
 
-  * another option for this sum to one constraint is something like the following for each stage as the first part of `opfn`
+  * ~~another option for this sum to one constraint is something like the following for each stage as the first part of `opfn`~~
 
 ```{r, eval=FALSE}
 z <- c(0.1, 0.2, 0.15)
@@ -81,57 +81,47 @@ sum(z[1:3]/sum(z[1:3]))
   * ~~reassemble within opfn function~~
 
 First create objective function `opfn`, and include parameter values to test if this function by itself works. 
-```{r, eval=FALSE}
-# Example parameter values
-optimizingParms <- c(rep(c(0.2, 0.3, 0.5), 6), 0)
-thermaltimeParms <- c(config$pft$phenoParms$tp1, config$pft$phenoParms$tp2, 
-                      config$pft$phenoParms$tp3, config$pft$phenoParms$tp4, 
-                      config$pft$phenoParms$tp5, config$pft$phenoParms$tp6)
-rhizomeParms <- rep(0, 6)
+```{r}
+library(BioCro)
 
 opfn <- function(optimizingParms, thermaltimeParms, rhizomeParms){ 
-
-  # Attempts at getting sum of leaf, stem, and root parameters in each stage to equal one:
-  
-  # 1. doesn't work because the likelihood of them being equal to one are very low, so it always returns Inf values (see unique(opt_results$member$bestvalit))
-  # if(sum(optimizingParms[1:3]) != 1){
-  #     return(Inf)
-  # } else {
-  
-  # 2. not sure where this would go to be effective? 
-  # optimizingParms[1:3] <- sum(optimizingParms[1:3]/sum(optimizingParms[1:3]))
-
-    params_list <- phenoParms(tp1 = thermaltimeParms[1], 
-                                 tp2 = thermaltimeParms[2], 
-                                 tp3 = thermaltimeParms[3], 
-                                 tp4 = thermaltimeParms[4], 
-                                 tp5 = thermaltimeParms[5], 
-                                 tp6 = thermaltimeParms[6], 
-                                 kStem1 = optimizingParms[1], 
-                                 kStem2 = optimizingParms[4], 
-                                 kStem3 = optimizingParms[7], 
-                                 kStem4 = optimizingParms[10], 
-                                 kStem5 = optimizingParms[13], 
-                                 kStem6 = optimizingParms[16], 
-                                 kLeaf1 = optimizingParms[2], 
-                                 kLeaf2 = optimizingParms[5], 
-                                 kLeaf3 = optimizingParms[8], 
-                                 kLeaf4 = optimizingParms[11], 
-                                 kLeaf5 = optimizingParms[14], 
-                                 kLeaf6 = optimizingParms[17], 
-                                 kRoot1 = optimizingParms[3], 
-                                 kRoot2 = optimizingParms[6], 
-                                 kRoot3 = optimizingParms[9], 
-                                 kRoot4 = optimizingParms[12], 
-                                 kRoot5 = optimizingParms[15], 
-                                 kRoot6 = optimizingParms[18], 
-                                 kRhizome1 = rhizomeParms[1], 
-                                 kRhizome2 = rhizomeParms[2], 
-                                 kRhizome3 = rhizomeParms[3], 
-                                 kRhizome4 = rhizomeParms[4], 
-                                 kRhizome5 = rhizomeParms[5], 
-                                 kRhizome6 = rhizomeParms[6], 
-                                 kGrain6 = optimizingParms[19])
+  optimizingParms[1:3] <- optimizingParms[1:3]/sum(optimizingParms[1:3])
+  optimizingParms[4:6] <- optimizingParms[4:6]/sum(optimizingParms[4:6])
+  optimizingParms[7:9] <- optimizingParms[7:9]/sum(optimizingParms[7:9])
+  optimizingParms[10:12] <- optimizingParms[10:12]/sum(optimizingParms[10:12])
+  optimizingParms[13:15] <- optimizingParms[13:15]/sum(optimizingParms[13:15])
+  optimizingParms[16:19] <- optimizingParms[16:19]/sum(optimizingParms[16:19])
+  params_list <- phenoParms(tp1 = thermaltimeParms[1], 
+                           tp2 = thermaltimeParms[2], 
+                           tp3 = thermaltimeParms[3], 
+                           tp4 = thermaltimeParms[4], 
+                           tp5 = thermaltimeParms[5], 
+                           tp6 = thermaltimeParms[6], 
+                           kStem1 = optimizingParms[1], 
+                           kStem2 = optimizingParms[4], 
+                           kStem3 = optimizingParms[7], 
+                           kStem4 = optimizingParms[10], 
+                           kStem5 = optimizingParms[13], 
+                           kStem6 = optimizingParms[16], 
+                           kLeaf1 = optimizingParms[2], 
+                           kLeaf2 = optimizingParms[5], 
+                           kLeaf3 = optimizingParms[8], 
+                           kLeaf4 = optimizingParms[11], 
+                           kLeaf5 = optimizingParms[14], 
+                           kLeaf6 = optimizingParms[17], 
+                           kRoot1 = optimizingParms[3], 
+                           kRoot2 = optimizingParms[6], 
+                           kRoot3 = optimizingParms[9], 
+                           kRoot4 = optimizingParms[12], 
+                           kRoot5 = optimizingParms[15], 
+                           kRoot6 = optimizingParms[18], 
+                           kRhizome1 = rhizomeParms[1], 
+                           kRhizome2 = rhizomeParms[2], 
+                           kRhizome3 = rhizomeParms[3], 
+                           kRhizome4 = rhizomeParms[4], 
+                           kRhizome5 = rhizomeParms[5], 
+                           kRhizome6 = rhizomeParms[6], 
+                           kGrain6 = optimizingParms[19])
   t <- BioCro::BioGro(
     WetDat = WetDat,
     day1 = day1,
@@ -155,14 +145,19 @@ opfn <- function(optimizingParms, thermaltimeParms, rhizomeParms){
   bio_meas <- select(OpBioGro_biomass, -ThermalT)
   diff <- abs(bio_ests - bio_meas)
   return(sum(diff))
-#  }
 }
 
-opfn(optimizingParms, thermaltimeParms, rhizomeParms)
+# Check function itself by running with example parameter values
+optimizingParms_check <- c(rep(c(0.2, 0.3, 0.5), 6), 0)
+thermaltimeParms_check <- c(config$pft$phenoParms$tp1, config$pft$phenoParms$tp2,
+                      config$pft$phenoParms$tp3, config$pft$phenoParms$tp4,
+                      config$pft$phenoParms$tp5, config$pft$phenoParms$tp6)
+rhizomeParms_check <- rep(0, 6)
+opfn(optimizingParms_check, thermaltimeParms_check, rhizomeParms_check)
 ```
 
 Run objective function through optimization with `DEoptim`, setting the upper and lower bounds for the varying parameters to 0 and 1 and providing values for the non-varying parameters thermal time and rhizome coefficients. 
-```{r, eval=FALSE}
+```{r, results='hide', message=FALSE}
 library(DEoptim)
 
 thermaltimevals <- c(config$pft$phenoParms$tp1, config$pft$phenoParms$tp2, 
@@ -170,11 +165,18 @@ thermaltimevals <- c(config$pft$phenoParms$tp1, config$pft$phenoParms$tp2,
                      config$pft$phenoParms$tp5, config$pft$phenoParms$tp6)
 rhizomevals <- rep(0, 6)
 
-opt_results <- DEoptim(fn = opfn, lower = rep(0, 19), upper = rep(1, 19), thermaltimeParms = thermaltimevals, rhizomeParms = rhizomevals, control = DEoptim.control(itermax = 1000))
+opt_results <- DEoptim(fn = opfn, lower = rep(0, 19), upper = rep(1, 19), thermaltimeParms = thermaltimevals, rhizomeParms = rhizomevals, control = DEoptim.control(itermax = 10))
+```
 
-# rerun prior line until opt_results$optim$bestval != Inf? 
-
+Test that the resulting parameter values produce the same biomass estimates. `parms_results` are the actual parameters that we would use because they've been adjusted for the sum to 1 constraint. 
+```{r}
 parms_results <- as.vector(opt_results$optim$bestmem)
+parms_results[1:3] <- parms_results[1:3]/sum(parms_results[1:3])
+parms_results[4:6] <- parms_results[4:6]/sum(parms_results[4:6])
+parms_results[7:9] <- parms_results[7:9]/sum(parms_results[7:9])
+parms_results[10:12] <- parms_results[10:12]/sum(parms_results[10:12])
+parms_results[13:15] <- parms_results[13:15]/sum(parms_results[13:15])
+parms_results[16:19] <- parms_results[16:19]/sum(parms_results[16:19])
 optimalParms <- phenoParms(tp1 = thermaltimevals[1], 
                                  tp2 = thermaltimevals[2], 
                                  tp3 = thermaltimevals[3], 
@@ -217,7 +219,18 @@ results_test <- BioCro::BioGro(
     seneControl = l2n(config$pft$seneControl),
     photoControl = l2n(config$pft$photoParms))
 
-results_test == opt_results$optim$bestval
+results_test2 <- data.frame(ThermalT = results_test$ThermalT, 
+                 Stem = results_test$Stem,
+                 Leaf = results_test$Leaf,
+                 Root = results_test$Root,
+                 Rhizome = results_test$Rhizome,
+                 Grain = results_test$Grain,
+                 LAI = results_test$LAI)
+results_test3 <- results_test2 %>% 
+  filter(round(results_test2$ThermalT) %in% round(OpBioGro_biomass$ThermalT))
+diff <- sum(abs(results_test3 - OpBioGro_biomass))
+
+plot(results_test)
 ```
 
 ### DEoptim examples
@@ -281,3 +294,44 @@ outDEoptim <- DEoptim(error_heston, lower, upper,
   K = C0116_K[i], tau = C0116_T_t[i], r = C0116_r[i], q = C0116_DY[i])
 ```
 
+
+### MCMC approach
+
+BayesianSetup = model info and model parameter priors
+model = BioGro
+parameters = (varying) leaf, stem, root coeffs (& non-varying?)
+
+provide prior for each param, can have upper and lower boundaries and distribution
+
+likelihood = model
+
+Example has three parameters with uniform distributions bounded at -10 and 10. 
+
+```{r, eval=FALSE}
+library(BayesianTools)
+
+ll_ex <- generateTestDensityMultiNormal(sigma = "no correlation")
+bayesianSetup_ex <- createBayesianSetup(likelihood = ll_ex, lower = rep(-10, 3), upper = rep(10, 3))
+
+iter_ex = 10000
+settings_ex = list(iterations = iter_ex, nrChains = 3, message = FALSE)
+out <- runMCMC(bayesianSetup = bayesianSetup_ex, sampler = "Metropolis", settings = settings_ex)
+
+plot(out)
+getSample(out, start = 100, end = NULL, thin = 5, whichParameters = 1:2)
+```
+
+Possible ll for our case: 
+```{r, eval=FALSE}
+sum(log(dnorm(observed_biomasses-predicted_biomasses,0,1)))
+```
+
+```{r, eval=FALSE}
+ll <- function(x) sum(dnorm(x, log = TRUE))
+test <- createBayesianSetup(ll, prior = NULL, priorSampler = NULL, lower = -10, upper = 10)
+str(test)
+test$prior$density(0)
+test$likelihood$density(c(1,1))
+test_run <- runMCMC(test)
+plot(test_run)
+```
