--- a/BioCro/DARPA/biocro_opt_darpa.Rmd
+++ b/BioCro/DARPA/biocro_opt_darpa.Rmd
@@ -79,6 +79,7 @@ sum(z[1:3]/sum(z[1:3]))
 * ~~phenoParms = vector of 25 values~~
   * ~~split up parameters into the ones that will vary and the ones that will not. op parms = 19 values, thermal = 6, rhizome = 6~~
   * ~~reassemble within opfn function~~
+* Biomass measurements need to be in correct units (mg/ha)
 
 First create objective function `opfn`, and include parameter values to test if this function by itself works. 
 ```{r}
@@ -122,10 +123,15 @@ opfn <- function(optimizingParms, thermaltimeParms, rhizomeParms){
                            kRhizome5 = rhizomeParms[5], 
                            kRhizome6 = rhizomeParms[6], 
                            kGrain6 = optimizingParms[19])
+  #print(params_list)
   t <- BioCro::BioGro(
     WetDat = WetDat,
     day1 = day1,
     dayn = dayn,
+    iRhizome = 0.001, 
+    iLeaf = 0.001, 
+    iStem = 0.001, 
+    iRoot = 0.001, 
     soilControl = l2n(config$pft$soilControl),
     canopyControl = l2n(config$pft$canopyControl),
     phenoControl = l2n(params_list),
@@ -156,7 +162,7 @@ rhizomeParms_check <- rep(0, 6)
 opfn(optimizingParms_check, thermaltimeParms_check, rhizomeParms_check)
 ```
 
-Run objective function through optimization with `DEoptim`, setting the upper and lower bounds for the varying parameters to 0 and 1 and providing values for the non-varying parameters thermal time and rhizome coefficients. 
+Run objective function through optimization with `DEoptim`, setting the upper and lower bounds for the varying parameters to 0 and 1 and providing values for the non-varying parameters thermal time and rhizome coefficients. Reducing itermax reduces time to run `DEoptim`, but the resulting best value doesn't change much. 
 ```{r, results='hide', message=FALSE}
 library(DEoptim)
 
@@ -165,11 +171,13 @@ thermaltimevals <- c(config$pft$phenoParms$tp1, config$pft$phenoParms$tp2,
                      config$pft$phenoParms$tp5, config$pft$phenoParms$tp6)
 rhizomevals <- rep(0, 6)
 
-opt_results <- DEoptim(fn = opfn, lower = rep(0, 19), upper = rep(1, 19), thermaltimeParms = thermaltimevals, rhizomeParms = rhizomevals, control = DEoptim.control(itermax = 10))
+opt_results <- DEoptim(fn = opfn, lower = rep(0, 19), upper = rep(1, 19), thermaltimeParms = thermaltimevals, rhizomeParms = rhizomevals, control = DEoptim.control(itermax = 2))
 ```
 
 Test that the resulting parameter values produce the same biomass estimates. `parms_results` are the actual parameters that we would use because they've been adjusted for the sum to 1 constraint. 
 ```{r}
+library(ggplot2)
+
 parms_results <- as.vector(opt_results$optim$bestmem)
 parms_results[1:3] <- parms_results[1:3]/sum(parms_results[1:3])
 parms_results[4:6] <- parms_results[4:6]/sum(parms_results[4:6])
@@ -213,6 +221,10 @@ results_test <- BioCro::BioGro(
     WetDat = WetDat,
     day1 = day1,
     dayn = dayn,
+    iRhizome = 0.001, 
+    iLeaf = 0.001, 
+    iStem = 0.001, 
+    iRoot = 0.001, 
     soilControl = l2n(config$pft$soilControl),
     canopyControl = l2n(config$pft$canopyControl),
     phenoControl = l2n(optimalParms),
@@ -231,6 +243,15 @@ results_test3 <- results_test2 %>%
 diff <- sum(abs(results_test3 - OpBioGro_biomass))
 
 plot(results_test)
+
+biomass_meas_plot <- OpBioGro_biomass %>% 
+  tidyr::pivot_longer(Stem:Grain)
+biomass_ests_plot <- results_test2 %>% 
+  tidyr::pivot_longer(Stem:Grain)
+ggplot(biomass_meas_plot, aes(ThermalT, value, color = name)) +
+  geom_point() +
+  geom_line(data = biomass_ests_plot, aes(ThermalT, value, color = name)) +
+  xlim(c(0, 2000))
 ```
 
 ### DEoptim examples
@@ -335,3 +356,6 @@ test$likelihood$density(c(1,1))
 test_run <- runMCMC(test)
 plot(test_run)
 ```
+
+prior distribution + likelihood distribution = posterior distribution
+MCMC is for estimating posterior when it can't be calculated directly (e.g., from unusual prior and likelihood dists)
