--- a/BioCro/DARPA/biocro_opt_darpa.Rmd
+++ b/BioCro/DARPA/biocro_opt_darpa.Rmd
@@ -79,7 +79,7 @@ sum(z[1:3]/sum(z[1:3]))
 * ~~phenoParms = vector of 25 values~~
   * ~~split up parameters into the ones that will vary and the ones that will not. op parms = 19 values, thermal = 6, rhizome = 6~~
   * ~~reassemble within opfn function~~
-* Biomass measurements need to be in correct units (mg/ha)
+* ~~Biomass measurements need to be in correct units (Mg/ha)~~
 
 First create objective function `opfn`, and include parameter values to test if this function by itself works. 
 ```{r}
@@ -150,7 +150,23 @@ opfn <- function(optimizingParms, thermaltimeParms, rhizomeParms){
   bio_ests <- select(ttt, -ThermalT)
   bio_meas <- select(OpBioGro_biomass, -ThermalT)
   diff <- abs(bio_ests - bio_meas)
-  return(sum(diff))
+  
+  bio_meas_sum <- bio_meas %>% 
+    mutate(stage = rownames(.)) %>% 
+    rowwise() %>% 
+    mutate(total_bio = sum(Stem:Grain)) %>% 
+    select(stage, total_bio)
+  
+  diff_norm <- diff %>% 
+    mutate(stage = rownames(.)) %>% 
+    left_join(., bio_meas_sum, by = c("stage")) %>% 
+    mutate(Stem_norm = Stem / total_bio, 
+         Leaf_norm = Leaf / total_bio, 
+         Root_norm = Root / total_bio) %>% 
+    select(Stem_norm, Leaf_norm, Root_norm, Rhizome, Grain, LAI) %>% 
+    rename(Stem = Stem_norm, Leaf = Leaf_norm, Root = Root_norm)
+  
+  return(sum(diff_norm))
 }
 
 # Check function itself by running with example parameter values
@@ -251,7 +267,9 @@ biomass_ests_plot <- results_test2 %>%
 ggplot(biomass_meas_plot, aes(ThermalT, value, color = name)) +
   geom_point() +
   geom_line(data = biomass_ests_plot, aes(ThermalT, value, color = name)) +
-  xlim(c(0, 2000))
+  xlim(c(0, 2000)) +
+  labs(x = "Thermal Time", y = "Biomass (Ma/ha)", color = "Plant Part") +
+  theme_classic()
 ```
 
 ### DEoptim examples
