Trying to figure out experiment 1 design

--- a/BioCro/DARPA/biocro_biomass_clean_darpa.Rmd
+++ b/BioCro/DARPA/biocro_biomass_clean_darpa.Rmd
@@ -5,23 +5,26 @@ output: github_document
 urlcolor: blue
 ---
 
+### Download data
+
 Data downloaded from [Google Sheet](https://docs.google.com/spreadsheets/d/134qzz1mcfKyGSS4vMOh0CONUECUuMiDyp6D_pzGjfi0/edit#gid=1249864874) as an .xlsx. 
 
 ```{r}
 library(readxl)
 
-data_path <- "biocro_biomass_clean_darpa_files/Darpa_setaria_chambers_experiments.xlsx"
+data_path <- "BioCro/DARPA/biocro_biomass_clean_darpa_files/Darpa_setaria_chambers_experiments.xlsx"
 sheets_names <- excel_sheets(data_path)
 
 biomass_sheets <- c(11, 9, 7, 5, 3, 2, 1)
 for(sheet in biomass_sheets){
   exp_name <- paste0("exp", substr(sheets_names[sheet], 0, 1))
-  print(exp_name)
   assign(exp_name, read_excel(data_path, sheet = sheets_names[sheet]))
 }
 ```
 
-Plots for first experiment. Plot by treatment started date (2), genotype (1), temperature (3), light intensity (3). Skipping conversion to mass by area. Removing yield for now. 
+### First experiment
+
+Plots for first experiment. Plot by treatment started date (2), genotype (1), temperature (3), light intensity (3), separate plots by sowing date (2). Skipping conversion to mass by area. Removing yield for now. 
 
 Questions: 
 
@@ -30,19 +33,27 @@ Questions:
 library(dplyr)
 library(ggplot2)
 
-exp1_clean <- exp1 %>% 
-  filter(is.na(`Yield (mg)`), !is.na(`roots DW (g)`)) %>% 
-  #rename(biomas_harvested = `biomas harvested`) %>% 
-  mutate(date = lubridate::ymd(`biomas harvested`)) %>% 
-  select(2, 5, 6, 7, 8, 21, contains('DW')) %>% 
-  tidyr::pivot_longer(`panicle DW(g)`:`roots DW (g)`)
+colnames(exp1) <- stringr::str_replace_all(colnames(exp1), " ", "_")
+exp1 <- data.frame(exp1)
 
-ggplot(exp1_clean, aes(date, value)) +
+exp1_sowing1_temp1 <- exp1 %>% 
+  filter(sowing_date_T.31Cday.night == unique(exp1$sowing_date_T.31Cday.night)[1], 
+         temperature_..C._day.night == 22)
+
+exp1_sowing1_temp1_clean <- exp1_sowing1_temp1 %>% 
+  filter(is.na(Yield_.mg.), !is.na(roots_DW_.g.)) %>% 
+  mutate(date = lubridate::ymd(biomas_harvested)) %>% 
+  select(date, genotype, temperature_..C._day.night, light_intensity.umol.m2.s., sowing_date_T.31Cday.night, contains('DW')) %>% 
+  tidyr::pivot_longer(panicle_DW.g.:roots_DW_.g.)
+
+ggplot(exp1_sowing1_temp1_clean, aes(date, value, color = name)) +
   geom_point()
 
-ggplot(exp1_clean, aes(date, value, color = name)) +
+ggplot(exp1_sowing1_clean, aes(date, value, color = name)) +
   geom_point() +
-  facet_wrap(~`treatment started`)
+  facet_wrap(vars(temperature_..C._day.night, light_intensity.umol.m2.s., date))
+
+
 ```
 
 
