--- a/BioCro/DARPA/biocro_opt_darpa.Rmd
+++ b/BioCro/DARPA/biocro_opt_darpa.Rmd
@@ -38,7 +38,7 @@ genus <- config$pft$type$genus
 years <- lubridate::year(start.date):lubridate::year(end.date)
 l2n <- function(x) lapply(x, as.numeric)
 day1 <- 1
-dayn <- 100
+dayn <- 50
 
 OpBioGro_biomass <- read.csv("biocro_opt_darpa_files/OpBioGro_biomass.csv")
 ```
@@ -187,7 +187,7 @@ thermaltimevals <- c(config$pft$phenoParms$tp1, config$pft$phenoParms$tp2,
                      config$pft$phenoParms$tp5, config$pft$phenoParms$tp6)
 rhizomevals <- rep(0, 6)
 
-opt_results <- DEoptim(fn = opfn, lower = rep(0, 19), upper = rep(1, 19), thermaltimeParms = thermaltimevals, rhizomeParms = rhizomevals, control = DEoptim.control(itermax = 2))
+opt_results <- DEoptim(fn = opfn, lower = c(rep(0, 2), rep(0.6, 4), 0.3, 0.1, rep(0, 11)), upper = c(rep(1, 8), rep(0.1, 4), rep(1, 7)), thermaltimeParms = thermaltimevals, rhizomeParms = rhizomevals, control = DEoptim.control(itermax = 20))
 ```
 
 Test that the resulting parameter values produce the same biomass estimates. `parms_results` are the actual parameters that we would use because they've been adjusted for the sum to 1 constraint. 
@@ -257,8 +257,6 @@ results_test2 <- data.frame(ThermalT = results_test$ThermalT,
 results_test3 <- results_test2 %>% 
   filter(round(results_test2$ThermalT) %in% round(OpBioGro_biomass$ThermalT))
 diff <- sum(abs(results_test3 - OpBioGro_biomass))
-
-plot(results_test)
 
 biomass_meas_plot <- OpBioGro_biomass %>% 
   tidyr::pivot_longer(Stem:Grain) %>% 
